# air-accountant

./: .gitignore  README.md  pyproject.toml
air-accountant/: airtable.py  models.py
air_accountant/: __init__.py  agents.py  airtable.py  models.py
scripts/: populate_chart_o_acc.py
